@@ -7,6 +7,14 @@ Next release
 - Functional tests now use multiprocessing module instead of subprocess module,
   speeding up test suite and making concurrent execution more reliable.
 
+- Add a ``url_prefix`` adjustment setting.  You can use it by passing
+  ``script_name='/foo'`` to ``waitress.serve`` or you can use it in a
+  ``PasteDeploy`` ini file as ``script_name = /foo``.  This will cause the WSGI
+  ``SCRIPT_NAME`` value to be the value passed minus any trailing slashes you
+  add, and it will cause the ``PATH_INFO`` of any request which is prefixed
+  with this value to be stripped of the prefix.  You can use this instead of
+  PasteDeploy's ``prefixmiddleware``to always prefix the path.
+
 0.8.5 (2013-05-27)
 ------------------
 
